frontend/test/should_fail/attrib_model_091.gm
enum AAA {
	e1,
	e2
}

node class AAB {
  value:AAA;
}

